docker compose 수정

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,7 +35,7 @@ services:
     volumes:
       - ./backend:/backend:rw,delegated
     env_file:
-      - ./backend/.env.development
+      - .env.development
     environment:
       - ENV=development
 
