- db 초기화 후 재생성 - 스케쥴러 공휴일 스킵

--- a/backend/stockeasy/collector/alembic.ini
+++ b/backend/stockeasy/collector/alembic.ini
@@ -48,7 +48,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://timescale_user:timescale_password@localhost:5433/stockeasy
+sqlalchemy.url = postgresql://collector_user:StockCollector2024@localhost:6433/stockeasy_collector
 
 
 [post_write_hooks]
