--- a/Dockerfile.stockeasy.collector.dev
+++ b/Dockerfile.stockeasy.collector.dev
@@ -15,4 +15,4 @@ ENV PATH="/venv/bin:$PATH"
 EXPOSE 8001 8002
 
 # 컨테이너 시작 명령
-CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"] 
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"] 
