KOSPI, KOSDAQ 차트 시장 지수 상황(지수 상승율, 상승/하락 종목수등)

--- a/backend/stockeasy/collector/alembic.ini
+++ b/backend/stockeasy/collector/alembic.ini
@@ -3,6 +3,8 @@
 [alembic]
 # path to migration scripts
 script_location = alembic
+sqlalchemy.url = postgresql+psycopg2://${TIMESCALE_USER}:${TIMESCALE_PASSWORD}@${TIMESCALE_HOST}:${TIMESCALE_PORT}/${TIMESCALE_DB}
+
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -47,8 +49,6 @@ version_path_separator = os
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-
-sqlalchemy.url = postgresql://collector_user:StockCollector2024@localhost:6433/stockeasy_collector
 
 
 [post_write_hooks]
