--- a/Dockerfile.stockeasy.collector.prod
+++ b/Dockerfile.stockeasy.collector.prod
@@ -18,12 +18,11 @@ ENV PATH="/venv/bin:$PATH"
 ENV ENV=production
 ENV DEBUG=false
 
-# 로그 디렉토리 생성
-RUN mkdir -p logs
-
 # 비root 사용자로 실행 (보안)
 RUN groupadd -r appuser && useradd -r -g appuser appuser
-RUN chown -R appuser:appuser /backend/stockeasy/collector
+
+# 로그 디렉토리 생성 및 권한 설정
+RUN mkdir -p logs && chown -R appuser:appuser /backend/stockeasy/collector
 USER appuser
 
 # 포트 노출
