--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,14 @@ services:
       - POSTGRES_PASSWORD=${TIMESCALE_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF8 --locale=C
       - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_HOST_AUTH_METHOD=md5
       - LANG=C.UTF-8
       - LC_ALL=C.UTF-8
       - TZ=Asia/Seoul
     volumes:
       - timescale_data:/var/lib/postgresql/data
       - ./backend/stockeasy/collector/database/init:/docker-entrypoint-initdb.d
+      - ./backend/stockeasy/collector/database/config/pg_hba.conf:/etc/postgresql/pg_hba.conf
     ports:
       - "5433:5432"
     command: >
@@ -73,6 +75,8 @@ services:
       -c work_mem=4MB
       -c maintenance_work_mem=64MB
       -c timezone=Asia/Seoul
+      -c hba_file=/etc/postgresql/pg_hba.conf
+      -c listen_addresses='*'
     networks:
       - app-network
     healthcheck:
