린터 ruff 사용, 각종 linter warning 수정 적용(agent 한정)

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,10 +1,51 @@
 {
-    "python.languageServer": "Pylance",
-    "python.analysis.extraPaths": [
+    "extraPaths": [
       "./src",
       "./backend"
     ],
-    "python.analysis.typeCheckingMode": "basic",
-    "python.analysis.diagnosticMode": "workspace",
-    "python.analysis.autoImportCompletions": true
+    "venvPath": "./backend",
+    "venv": "venv",
+    "typeCheckingMode": "off",
+    "reportUnusedImport": false,
+    "reportUnusedVariable": false,
+    "reportUnusedFunction": false,
+    "reportUnusedClass": false,
+    "reportAny": false,
+    "reportUnknownVariableType": false,
+    "reportUnknownMemberType": false,
+    "reportUnknownArgumentType": false,
+    "reportUnknownLambdaType": false,
+    "reportUnknownParameterType": false,
+    "reportMissingParameterType": false,
+    "reportMissingTypeArgument": false,
+    "reportUntypedFunctionDecorator": false,
+    "reportUntypedClassDecorator": false,
+    "reportUntypedBaseClass": false,
+    "reportUntypedNamedTuple": false,
+    "reportPrivateUsage": false,
+    "reportTypeCommentUsage": false,
+    "reportPrivateImportUsage": false,
+    "reportConstantRedefinition": false,
+    "reportIncompatibleMethodOverride": false,
+    "reportIncompatibleVariableOverride": false,
+    "reportOverlappingOverload": false,
+    "reportUninitializedInstanceVariable": false,
+    "reportCallInDefaultInitializer": false,
+    "reportUnnecessaryIsInstance": false,
+    "reportUnnecessaryCast": false,
+    "reportUnnecessaryComparison": false,
+    "reportUnnecessaryContains": false,
+    "reportAssertAlwaysTrue": false,
+    "reportSelfClsParameterName": false,
+    "reportImplicitStringConcatenation": false,
+    "reportInvalidStringEscapeSequence": false,
+    "reportUnusedCoroutine": false,
+    "reportUnusedExpression": false,
+    "reportGeneralTypeIssues": false,
+    "reportOptionalSubscript": false,
+    "reportOptionalMemberAccess": false,
+    "reportOptionalCall": false,
+    "reportOptionalIterable": false,
+    "reportOptionalContextManager": false,
+    "reportOptionalOperand": false
   }
