--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -133,8 +133,6 @@ mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.4.3
 multiprocess==0.70.16
-mypy==1.15.0
-mypy-extensions==1.0.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -152,7 +150,7 @@ nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
 nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
+#nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
@@ -259,7 +257,7 @@ traitlets==5.14.3
 transformers==4.49.0
 trio==0.30.0
 trio-websocket==0.12.2
-triton==3.2.0
+
 typing-inspect==0.9.0
 typing_extensions==4.13.2
 tzdata==2025.1
@@ -280,3 +278,4 @@ xxhash==3.5.0
 yarg==0.1.9
 yarl==1.20.0
 zstandard==0.23.0
+ruff>=0.12.0
