fix: GitHub Actions 권한 추가 - 이슈 자동 닫기 권한 설정

--- a/.github/workflows/auto-close-issues.yml
+++ b/.github/workflows/auto-close-issues.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [develop]
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   close-issues:
     runs-on: ubuntu-latest
